update avatar size only for team profiles, fix text avatar alignment

--- a/src/components/ProfileIcon/index.less
+++ b/src/components/ProfileIcon/index.less
@@ -1,12 +1,4 @@
-.square(@pixel) {
-  width: @pixel;
-  height: @pixel;
-}
-
 .nameIcon {
-  @pixel: 20px;
-  .square( @pixel);
-
   display: flex;
   align-items: center;
   justify-content: center;
@@ -21,13 +13,4 @@
   border-radius: 50%;
   box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
   cursor: default;
-
-  .textIcon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding-right: 0.5px;
-  }
 }
